--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0"
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.1"
   },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
+  },
+  "scripts": {
+    "build": "browserify src/js/main.js -o bundle.js -t babelify"  
   }
 }
