--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.1"
+    "browserify": "^13.0.1",
+    "createjs": "0.0.0"
   },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
   },
   "scripts": {
-    "build": "browserify src/js/main.js -o bundle.js -t babelify"  
+    "build": "browserify src/js/main.js -o bundle.js -t babelify"
   }
 }
