--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "Buttons": "^2.0.0",
-    "EaselJS": "^0.8.2"
+    "EaselJS": "^0.8.2",
+    "cytoscape": "^2.7.9"
   }
 }
