--- a/package.json
+++ b/package.json
@@ -7,18 +7,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babelify": "^7.3.0",
     "browserify": "^13.0.1",
-    "createjs": "0.0.0"
+    "tsc": "^1.20150623.0",
+    "tsify": "^1.0.7",
+    "typescript": "^2.0.3"
   },
   "optionalDependencies": {},
   "engines": {
     "node": "*"
   },
   "scripts": {
-    "build": "browserify src/js/main.js -o bundle.js -t babelify"
+    "build": "browserify src/ts/main.ts -p [ tsify ] > bundle.js"
   }
 }
